--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,21 @@ systemProp.https.proxyPort=1080
 systemProp.http.nonProxyHosts=192.168.*
 systemProp.https.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1081
+
+#compile
+compileSdkVersion=23
+buildToolsVersion=23.0.1
+
+#defaultConfig
+minSdkVersion=9
+targetSdkVersion=21
+
+#build
+versionCode=1
+versionName=1.0.1
+applicationId=com.cmcc.host.demo
+
+storeFile=../../sign/release.jks
+storePassword=hzcmcc
+keyAlias=com.pay.plugin
+keyPassword=hzcmcc
