--- a/Demo/HostDemo/build.gradle
+++ b/Demo/HostDemo/build.gradle
@@ -3,42 +3,13 @@ apply from: '../../ext-android.gradle'
 
 android {
     defaultConfig {
-        applicationId project.applicationId
+        applicationId "com.cmcc.host.demo"
         multiDexEnabled true
     }
-
-    signingConfigs {
-        debug {
-            storeFile file(project.storeFile)
-            storePassword project.storePassword
-            keyAlias project.keyAlias
-            keyPassword project.keyPassword
-        }
-    }
-
-    buildTypes {
-        release {
-            shrinkResources true
-            zipAlignEnabled true
-            versionNameSuffix "-release"
-            signingConfig signingConfigs.debug
-            minifyEnabled true
-        }
-
-        debug {
-            shrinkResources false
-            zipAlignEnabled false
-            versionNameSuffix "-debug"
-            signingConfig signingConfigs.debug
-        }
-
-    }
-
-
     //修改apk名
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
-            def appName = project.name
+            def appName = rootProject.name
             appName += "-"
             appName += defaultConfig.versionName
             if (variant.buildType.versionNameSuffix != null) {
@@ -51,10 +22,4 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-//    compile project(path: ':Bundle:hookplugin')
 }
