--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,5 @@ storeFile=../../sign/release.jks
 storePassword=hzcmcc
 keyAlias=com.pay.plugin
 keyPassword=hzcmcc
+
+hostAppName =app-base-release.apk
