--- a/ext-plguin-android.gradle
+++ b/ext-plguin-android.gradle
@@ -50,15 +50,22 @@ task clean(type: Delete) {
     delete "${rootDir}/build-outputs/${apkName}.so"
 }
 
+//第一步plugin 的资源ID和App-base apk的资源ID合并
 //用修改的aapt工具来打包插件的资源,避免插件资源冲突
+//注意: app-base-release.apk是宿主程序的apk文件
 task aaptRelease(type: Exec, dependsOn: 'init') {
     inputs.file "$sdk.androidJar"
-    inputs.file "${rootDir}/build-outputs/demo-base-release.apk"
-    inputs.file "$projectDir/AndroidManifest.xml"
-    inputs.dir "$projectDir/res"
-    inputs.dir "$projectDir/assets"
-    inputs.file "${rootDir}/sample/build/generated/source/r/release/ctrip/android/sample/R.java"
+    inputs.file "${rootDir}/build-outputs/${rootProject.hostAppName}"
+    inputs.file "$projectDir/src/main/AndroidManifest.xml"
+    inputs.dir "$projectDir/src/main/res"
+    inputs.dir "$projectDir/src/main/assets"
 
+    /////////////////////////-----------------/////////////////////////
+    //input HostDemo 项目文件,后续改为动态配置,动态查找
+    inputs.file "${rootDir}/Demo/HostDemo/build/generated/source/r/release/com/cmcc/hook/plugin/R.java"
+    /////////////////////////-----------------/////////////////////////
+
+    //下面三个文件是用aapt重新编译资源过后自动生成的
     outputs.dir "$buildDir/gen/r"
     outputs.file "$buildDir/intermediates/res/resources.zip"
     outputs.file "$buildDir/intermediates/res/aapt-rules.txt"
@@ -81,13 +88,13 @@ task aaptRelease(type: Exec, dependsOn: 'init') {
     argv << "-I"
     argv << "$sdk.androidJar"        //添加一个已有的固化jar包
     argv << '-I'
-    argv << "${rootDir}/build-outputs/demo-base-release.apk"
+    argv << "${rootDir}/build-outputs/${rootProject.hostAppName}"
     argv << '-M'
-    argv << "$projectDir/AndroidManifest.xml"    //指定manifest文件
+    argv << "$projectDir/src/main/AndroidManifest.xml"    //指定manifest文件
     argv << '-S'
-    argv << "$projectDir/res"                    //res目录
+    argv << "$projectDir/src/main/res"                    //res目录
     argv << '-A'
-    argv << "$projectDir/assets"                 //assets目录
+    argv << "$projectDir/src/main/assets"                 //assets目录
     argv << '-m'        //make package directories under location specified by -J
     argv << '-J'
     argv << "$buildDir/gen/r"         //哪里输出R.java定义
@@ -101,7 +108,7 @@ task aaptRelease(type: Exec, dependsOn: 'init') {
     argv << '-0'    //指定哪些后缀名不会被压缩
     argv << 'apk'
     argv << '--public-R-path'
-    argv << "${rootDir}/sample/build/generated/source/r/release/ctrip/android/sample/R.java"
+    argv << "${rootDir}/Demo/HostDemo/build/generated/source/r/release/com/cmcc/hook/plugin/R.java"
     argv << '--apk-module'
     argv << "$resourceId"
     args = argv
@@ -110,8 +117,9 @@ task aaptRelease(type: Exec, dependsOn: 'init') {
 
 task compileRelease(type: JavaCompile,dependsOn:'aaptRelease') {
     inputs.file "$sdk.androidJar"
+    //libs下文件
     inputs.files fileTree("${projectDir}/libs").include('*.jar')
-    inputs.file "${rootDir}/sample/build/intermediates/classes-proguard/release/classes.jar"
+    inputs.file "${rootDir}/Demo/HostDemo/build/intermediates/classes-proguard/release/classes.jar"
     inputs.files fileTree("$projectDir/src").include('**/*.java')
     inputs.files fileTree("$buildDir/gen/r").include('**/*.java')
 
@@ -142,7 +150,8 @@ task obfuscateRelease(type:proguard.gradle.ProGuardTask, dependsOn:'compileRelea
     inputs.dir "$buildDir/intermediates/classes"
     inputs.files fileTree("${projectDir}/libs").include('*.jar')
     inputs.file "${sdk.androidJar}"
-    inputs.file "${rootDir}/sample/build/intermediates/classes-proguard/release/classes.jar"
+    //代码混淆的话需要
+    inputs.file "${rootDir}/Demo/HostDemo/build/intermediates/classes-proguard/release/classes.jar"
 
     outputs.file "$buildDir/intermediates/classes-obfuscated/classes-obfuscated.jar"
     outputs.file "${rootDir}/build-outputs/${apkName}-mapping.txt"
@@ -173,6 +182,7 @@ task dexRelease (type:Exec){
     args = argv
 }
 
+//打包成最终的项目文件.so
 task bundleRelease (type:Zip,dependsOn:['compileRelease','aaptRelease','dexRelease']){
     inputs.file "$buildDir/intermediates/dex/${project.name}_dex.zip"
     inputs.file "$buildDir/intermediates/res/resources.zip"
